--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "student",
     "password": "abcd1234",
-    "database": "database_development",
+    "database": "vexere",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
