--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": "https://github.com/trinhquanbkb/vexere.git",
   "author": "trinh quan <quan20028a3kb@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.19",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1" 
   },
   "dependencies": {
     "express": "^4.18.1",
