--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.19",
-    "sequelize-cli": "^6.4.1" 
+    "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.6"
