--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "gravatar-url": "3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mkdirp": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.6"
