--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gravatar-url": "3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.6"
